# MEO

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  MEO.sln  MEO_GenerateESP.py  README.md
.claude/: settings.local.json
.github/workflows/: installer.yml  native.yml
Docs/: ANTI_PATTERNS.md  ARCHITECTURE.md  BALANCE.md  DEBUGGING.md  DESIGN.md  ENGINE_NOTES.md  INDEX.md  INVARIANTS.md  MANUAL_MOD_CREATION_GUIDE.md  NATIVE_REWRITE_PLAN.md  P0_TESTING.md  ROADMAP-1.0.7-tally-cap.md  TEST_GUIDE.md
Docs/archive/: DYNAMIC_OR_DROP.md  NATIVE_REWRITE_PLAN.md  TESTING.md
Source/Scripts/: MEO_MCM.psc  MEO_PouchScript.psc  MEO_StartupQuest.psc
Source/Stubs/: README.md
assets/: MEO-README.txt  make_banner.sh  make_logo_16x9.sh  nexus-beta-1.0.7.bbcode  nexus-description.bbcode
data/: ench_catalog.json  gear_families.json  gem_balance.json  gem_balance_draft.json  gem_catalog.json  gem_forms.frozen.json  meo_calibration.rulings.example.json  pool_forms.frozen.json
data/rulings/: summermyst.rulings.json
installer/: README.md
installer/MEO.Installer/: Commands.cs  MEO.Installer.csproj  Program.cs  SynthesisMeta.json
installer/MEO.Synthesis/: MEO.Synthesis.csproj  Program.cs  SynthesisMeta.json
native/: .gitignore  CMakeLists.txt  GemCatalog.h  PCH.h  plugin.cpp  vcpkg.json
releases/v0.0.1-p0/: NOTES.txt  VERSION
releases/v0.0.2-p0/: NOTES.txt  VERSION
releases/v0.0.3-p0/: NOTES.txt  VERSION
tools/: build_balance.py  build_catalog.py  compile.sh  gen_catalog_header.py  parse_ench.py  release.sh  release_native.sh  release_synthesis.sh  scan_loadorder.py
(+118 files in other folders)
